# Snake

./: .gitignore  CMakeLists.txt  README.md  install.sh  readme.md
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  Food.cpp  Food.h  Game.cpp  Game.h  LeaderBoards.cpp  LeaderBoards.h  Menu.cpp  Menu.h  Random.cpp  Random.h  Snake.cpp  Snake.h  Utils.cpp  Utils.h
